create test and make dockerfile for backend and frontend

--- a/bank-lending-api/src/main/resources/templates/mailLoginTemplate.html
+++ b/bank-lending-api/src/main/resources/templates/mailLoginTemplate.html
@@ -53,7 +53,7 @@
         <p><span>Пароль:</span> <span th:text="${password}"></span></p>
     </div>
     <p>Пожалуйста, сохраните эти данные в надежном месте и не передавайте их третьим лицам.</p>
-    <p>Для входа в личный кабинет перейдите по ссылке: <a href="https://coolbank.com/login" target="_blank">https://coolbank.com/login</a>.</p> <!-- todo: переделать ссылку-->
+    <p>Для входа в личный кабинет перейдите по ссылке: <a href="http://localhost:4200/login" target="_blank">https://coolbank.com/login</a>.</p> <!-- todo: переделать ссылку-->
     <div class="footer">
         <p>С уважением, команда CoolBank228</p>
         <p>Это автоматическое сообщение. Пожалуйста, не отвечайте на него.</p>
