--- a/bank-lending-api/src/main/resources/templates/mailRevisionTemplate.html
+++ b/bank-lending-api/src/main/resources/templates/mailRevisionTemplate.html
@@ -61,7 +61,7 @@
     <p>Для продолжения рассмотрения вашего запроса, пожалуйста, перейдите в личный кабинет и внесите необходимые
         изменения в заявку.</p>
     <p>
-        <a href="#" class="action-button">Перейти в личный кабинет</a><!--todo: поменять на ссылку с frontend маршрута-->
+        <a href="http://localhost:4200/client/profile" class="action-button">Перейти в личный кабинет</a><!--todo: поменять на ссылку с frontend маршрута-->
     </p>
     <div class="footer">
         <p>Если у вас возникнут вопросы, свяжитесь с нашей службой поддержки.</p>
